# Sistema-Legal-Multiagente

./: .gitignore  .vercelignore  README.md  README_DEPLOYMENT.md
.github/workflows/: deploy.yml
backend/: .gitignore  Dockerfile  Procfile  env_example.txt  pyproject.toml  render.yaml  requirements.txt
backend/docs/legal/civil/: codigo_civil.txt
backend/docs/legal/comercial/: codigo_comercio.txt
backend/docs/legal/tributario/: estatuto_tributario.txt
backend/scripts/: setup_rag.py  verify_rag_compatibility.py
backend/src/agent/: __init__.py  conversation_memory.py  graph.py  graph_builder.py  legal_agent_system.py  legal_agents.py  specialized_agents.py  types.py  workflow_nodes.py
backend/src/api/: __init__.py  dependencies.py
backend/src/api/chat/: chat_api.py
backend/src/api/documents/: __init__.py  documents_api.py
backend/src/api/email/: email_api.py
backend/src/api/legal/: __init__.py  rag_api.py
backend/src/api/voice/: __init__.py  voice_api.py
backend/src/app/: main.py
backend/src/core/: __init__.py  cache_service.py  rag_service.py  secure_logging.py
backend/src/models/: documents.py  rag.py
backend/src/services/documents/: document_service.py  textract_service.py
backend/src/services/legal/rag/: query_processor.py  rag_core.py  vector_manager.py
backend/src/services/memory/: chat_memory.py
backend/src/services/voice/: voice_service.py  voice_service_simple.py
docs/: AWS_TEXTRACT_SETUP.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  DEVELOPMENT.md  ENVIRONMENT_VARIABLES_GUIDE.md  ENV_EXAMPLE.md  RAG_SETUP_GUIDE.md  TROUBLESHOOTING.md
frontend/: .vercelignore  TodoManager  env_example.txt  next.config.mjs  package-lock.json  package.json  tsconfig.json  vercel.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/api/email/conversation/: route.ts
frontend/app/chat/: page.tsx
frontend/app/documentos/: page.tsx
frontend/components/: accessibility-skip-links.tsx  auto-resize-textarea.tsx  chat-interface.tsx  chat-sidebar.tsx  document-uploader.tsx  email-conversation-modal.tsx  footer.tsx  header.tsx  hydration-boundary.tsx  legal-areas-grid.tsx  legal-disclaimer.tsx  legal-hero.tsx  legal-query-form.tsx  legal-sources.tsx  offline-indicator.tsx  related-questions.tsx  response-display.tsx  result-actions.tsx  shader-background.tsx  smart-suggestions.tsx  toast-provider.tsx  voice-recorder.tsx
frontend/contexts/: ChatMemoryContext.tsx  DocumentContext.tsx
frontend/hooks/: use-chat-memory.ts  use-documents.ts  use-legal-query.ts  use-query-suggestions.ts  use-voice-query.ts  use-voice-recorder.ts
frontend/lib/: api-client.ts  api-types.ts
frontend/styles/: audio-player.css
